--- a/src/app/components/modals/delete-crop-modal.component.html
+++ b/src/app/components/modals/delete-crop-modal.component.html
@@ -6,8 +6,8 @@
     <span class="alert-modal-text">Are you sure to delete this crop?</span>
     <div>
         <div class="alert-modal-buttons">
-            <button mat-raised-button color="primary"class="btn alert-modal-button alert-modal-button-success" (click)="onCloseConfirm()">Yes</button>
-            <button mat-raised-button class="alert-modal-button alert-modal-button-failure" (click)="onCloseCancel()">No</button>
+            <button mat-raised-button color="primary"class="btn alert-modal-button alert-modal-button-success btn btn-danger" (click)="onCloseConfirm()">Yes</button>
+            <button mat-raised-button class="alert-modal-button alert-modal-button-failure btn btn-info" (click)="onCloseCancel()">No</button>
         </div>
     </div>
 </div>
