--- a/src/app/components/crops/crops.component.html
+++ b/src/app/components/crops/crops.component.html
@@ -11,9 +11,12 @@
 	    <div>
 	        <div class="row" *ngIf="crops$.items">
 	            <div class="col-md-12" *ngIf="(crops$.items).length">
+
 					<button (click)="newCrop()" class="btn btn-success no_border_rad marg_bottom_small">
 						<i class="fa fa-plus-circle"></i> Add New Crop
 					</button>
+
+					<p *ngIf="request_feedback" class="text-center text-info">Test</p>
 	                <table id="farmers-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
 	                    <thead>
 	                    <tr>
@@ -66,7 +69,13 @@
 	                <div class="clearfix"></div>
 	            </div>
 				<div class="no_items_yet" *ngIf="(!crops$.items).length">
-					<p>NO crops yet</p>
+					<div class="col-md-6 col-md-offset-3">
+						<button (click)="newCrop()" class="btn btn-success no_border_rad marg_bottom_small text-center">
+							<i class="fa fa-plus-circle"></i> Add New Crop
+						</button>
+						<h4 class="">Oops no crops yet, create one by clicking on the above button </h4>
+					</div>
+
 				</div>
 	        </div>
 	    </div>
