--- a/src/app/components/modals/new-crop-modal.component.html
+++ b/src/app/components/modals/new-crop-modal.component.html
@@ -16,9 +16,9 @@
                 <option *ngFor="let category of categories" value="{{category.uid}}">{{category.name}}</option>
             </select>
             <div class="alert-modal-buttons">
-                <button mat-raised-button color="primary" class="alert-modal-button alert-modal-button-success"
+                <button mat-raised-button color="primary" class="alert-modal-button alert-modal-button-success btn btn-success"
                         type="submit" [disabled]="!cropForm.valid">Create</button>
-                <button mat-raised-button class="alert-modal-button alert-modal-button-failure" type="button"(click)="onCloseCancel()">Cancel</button>
+                <button mat-raised-button class="alert-modal-button alert-modal-button-failure btn btn-info" type="button"(click)="onCloseCancel()">Cancel</button>
             </div>
         </form>
     </div>
